--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,10 @@ export(batchMapQuick)
 export(batchMapResults)
 export(batchReduce)
 export(batchReduceResults)
+export(cfBrewTemplate)
+export(cfHandleUnkownSubmitError)
+export(cfKillBatchJob)
+export(cfReadBrewTemplate)
 export(copyRequiredJobFiles)
 export(dbCreateJobDefTable)
 export(dbGetJobs)
@@ -22,9 +26,12 @@ export(findSubmitted)
 export(getJob)
 export(getJobIds)
 export(getJobNr)
+export(getJobResources)
 export(getJobs)
 export(getJobTimes)
 export(getLogFiles)
+export(getResources)
+export(grepLogs)
 export(killJobs)
 export(loadRegistry)
 export(loadResult)
@@ -55,6 +62,13 @@ export(showStatus)
 export(submitJobs)
 export(testJob)
 import(BBmisc)
+import(DBI)
+import(RSQLite)
+import(utils)
+importFrom(brew,brew)
+importFrom(digest,digest)
+importFrom(plyr,rbind.fill)
+importFrom(sendmailR,sendmail)
 S3method(applyJobFunction,Registry)
 S3method(copyRequiredJobFiles,Registry)
 S3method(dbCreateJobDefTable,Registry)
