--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,10 +25,12 @@ export(findNotDone)
 export(findNotErrors)
 export(findNotOnSystem)
 export(findNotRunning)
+export(findNotStarted)
 export(findNotSubmitted)
 export(findNotTerminated)
 export(findOnSystem)
 export(findRunning)
+export(findStarted)
 export(findSubmitted)
 export(findTerminated)
 export(getErrors)
@@ -72,17 +74,18 @@ export(showConf)
 export(showLog)
 export(showStatus)
 export(submitJobs)
+export(sweepRegistry)
 export(testJob)
 export(updateRegistry)
 export(waitForJobs)
 import(BBmisc)
 import(DBI)
-import(RSQLite)
-import(utils)
 importFrom(brew,brew)
 importFrom(digest,digest)
 importFrom(plyr,rbind.fill)
 importFrom(sendmailR,sendmail)
+import(RSQLite)
+import(utils)
 S3method(applyJobFunction,Registry)
 S3method(copyRequiredJobFiles,Registry)
 S3method(dbCreateJobDefTable,Registry)
