--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ export(batchReduce)
 export(batchReduceResults)
 export(callFunctionOnSSHWorkers)
 export(cfBrewTemplate)
-export(cfHandleUnkownSubmitError)
+export(cfHandleUnknownSubmitError)
 export(cfKillBatchJob)
 export(cfReadBrewTemplate)
 export(copyRequiredJobFiles)
@@ -33,7 +33,8 @@ export(findRunning)
 export(findStarted)
 export(findSubmitted)
 export(findTerminated)
-export(getErrors)
+export(getConfig)
+export(getErrorMessages)
 export(getJob)
 export(getJobIds)
 export(getJobInfo)
@@ -47,6 +48,7 @@ export(grepLogs)
 export(installPackagesOnSSHWorkers)
 export(killJobs)
 export(loadConfig)
+export(loadExports)
 export(loadRegistry)
 export(loadResult)
 export(loadResults)
@@ -56,6 +58,7 @@ export(makeClusterFunctionsLocal)
 export(makeClusterFunctionsLSF)
 export(makeClusterFunctionsMulticore)
 export(makeClusterFunctionsSGE)
+export(makeClusterFunctionsSLURM)
 export(makeClusterFunctionsSSH)
 export(makeClusterFunctionsTorque)
 export(makeJob)
@@ -68,11 +71,13 @@ export(reduceResultsList)
 export(reduceResultsMatrix)
 export(reduceResultsVector)
 export(resetJobs)
+export(setConfig)
 export(setJobFunction)
+export(setJobNames)
 export(showClusterStatus)
-export(showConf)
 export(showLog)
 export(showStatus)
+export(sourceRegistryFiles)
 export(submitJobs)
 export(sweepRegistry)
 export(testJob)
@@ -80,6 +85,7 @@ export(updateRegistry)
 export(waitForJobs)
 import(BBmisc)
 import(DBI)
+import(fail)
 importFrom(brew,brew)
 importFrom(digest,digest)
 importFrom(plyr,rbind.fill)
@@ -97,6 +103,7 @@ S3method(getWorkerStatus,WorkerLinux)
 S3method(killWorkerJob,WorkerLinux)
 S3method(listWorkerJobs,WorkerLinux)
 S3method(print,ClusterFunctions)
+S3method(print,Config)
 S3method(print,Job)
 S3method(print,Registry)
 S3method(print,SubmitJobResult)
