--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,13 +10,14 @@ Maintainer: Bernd Bischl <bernd_bischl@gmx.net>
 URL: http://batchjobs.googlecode.com
 BugReports: http://code.google.com/p/batchjobs/issues/list
 MailingList: batchjobs@googlegroups.com
-License: BSD
-Depends: R (>= 2.13.0), BBmisc (>= 1.1-166)
-Imports: utils, digest, DBI, RSQLite, sendmailR, brew, plyr
+License: BSD_3_clause + file LICENSE
+Depends: R (>= 2.13.0), BBmisc (>= 1.3-64)
+Imports: utils, digest, DBI, RSQLite, sendmailR, brew, plyr, fail (>=
+        1.2)
 Suggests: testthat
 LazyData: yes
 ByteCompile: yes
-Version: 1.0-966
+Version: 1.1-1135
 Collate: 'addJob.R' 'applyJobFunction.R' 'batchApply.R'
         'batchExpandGrid.R' 'batchMapQuick.R' 'batchMap.R'
         'batchMapResults.R' 'batchReduce.R' 'batchReduceResults.R'
@@ -24,20 +25,22 @@ Collate: 'addJob.R' 'applyJobFunction.R' 'batchApply.R'
         'clusterFunctionsHelpers.R' 'clusterFunctionsInteractive.R'
         'clusterFunctionsLocal.R' 'clusterFunctionsLSF.R'
         'clusterFunctionsMulticore.R' 'clusterFunctions.R'
-        'clusterFunctionsSGE.R' 'clusterFunctionsSSH.R'
-        'clusterFunctionsTorque.R' 'clusterFunctionsUnitTests.R'
-        'conf.R' 'database.R' 'debugMulticore.R' 'debugSSH.R' 'doJob.R'
+        'clusterFunctionsSGE.R' 'clusterFunctionsSLURM.R'
+        'clusterFunctionsSSH.R' 'clusterFunctionsTorque.R'
+        'clusterFunctionsUnitTests.R' 'conf.R' 'database.R'
+        'debugMulticore.R' 'debugSSH.R' 'doJob.R' 'Exports.R'
         'filenames.R' 'filterResults.R' 'findJobs.R' 'findStatus.R'
-        'getErrors.R' 'getJobInfo.R' 'getJob.R' 'getLogFiles.R'
+        'getErrorMessages.R' 'getJobInfo.R' 'getJob.R' 'getLogFiles.R'
         'getSSHWorkersInfo.R' 'grepLogs.R' 'helpers.R'
         'installPackagesOnSSHWorkers.R' 'Job.R' 'killJobs.R'
         'loadResult.R' 'loadResults.R' 'reduceResults.R' 'Registry.R'
         'resetJobs.R' 'Resources.R' 'scheduleWorkerJobs.R' 'sendMail.R'
-        'setJobFunction.R' 'showClusterStatus.R' 'showLog.R'
-        'showStatus.R' 'submitJobs.R' 'sweepRegistry.R'
-        'syncRegistry.R' 'testJob.R' 'updateRegistry.R' 'waitForJobs.R'
-        'WorkerLinux.R' 'Worker.R' 'writeRscripts.R' 'zzz.R'
-Packaged: 2013-04-10 18:02:12 UTC; bischl
+        'setJobFunction.R' 'setJobNames.R' 'showClusterStatus.R'
+        'showLog.R' 'showStatus.R' 'sourceRegistryFiles.R'
+        'submitJobs.R' 'sweepRegistry.R' 'syncRegistry.R' 'testJob.R'
+        'updateRegistry.R' 'waitForJobs.R' 'WorkerLinux.R' 'Worker.R'
+        'writeRscripts.R' 'zzz.R'
+Packaged: 2013-10-01 22:47:08 UTC; bischl
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2013-04-10 20:18:36
+Date/Publication: 2013-10-02 08:16:18
