--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,14 +11,14 @@ URL: https://github.com/tudo-r/BatchJobs
 BugReports: https://github.com/tudo-r/BatchJobs/issues
 MailingList: batchjobs@googlegroups.com
 License: BSD_2_clause + file LICENSE
-Depends: R (>= 2.15.0), BBmisc (>= 1.7), methods
-Imports: checkmate (>= 1.4), utils, stats, digest, DBI, RSQLite,
-        sendmailR, brew, stringr, fail (>= 1.2)
-Suggests: testthat, MASS
+Depends: R (>= 2.15.0), BBmisc (>= 1.8), methods
+Imports: brew, checkmate (>= 1.5), DBI, digest, fail (>= 1.2), RSQLite
+        (>= 1.0.0), sendmailR, stats, stringr, utils
+Suggests: MASS, testthat
 LazyData: yes
 ByteCompile: yes
-Version: 1.4
-Packaged: 2014-09-24 15:49:46 UTC; bischl
+Version: 1.5
+Packaged: 2014-10-30 18:49:07 UTC; bischl
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2014-09-24 18:12:16
+Date/Publication: 2014-10-30 20:13:25
